assets/scss/layout/_layout.scss
.container {
    display: block;
    padding: 40px 20px;
    text-align: center;
    width: 100%;
    max-width: 1140px;

    @media (min-width: 768px) {
        display: flex;
        flex-wrap: wrap;
        padding: 60px 20px;
        margin: 0 auto;
        text-align: left;
        max-width: 1140px;

    }

    @media (min-width: 992px) {
        flex-wrap: unset;
    }
}

.wrap {
    flex-wrap: wrap;
}

.project {
        display: block;
        padding: 0 40px;
        margin: 0 auto;

        @media (min-width: 992px) {
        display: flex;
        justify-content: center;
        max-width: 1140px;
    }

    @media (min-width: 1200px){  
        max-width: 1140px;
    }

}

.project-container {

    display: block;
        @media (min-width: 768px){
            
            display: flex;
            flex-wrap: unset;
        
     
        }

}

.project-info {

    @media (min-width: 992px) {

        min-width: 50%;
        padding-right: 60px;
        
    }

    @media (min-width: 1200px){
    }

}

.project-image img {
    width: 100%;
    height: auto;

    @media (min-width: 768px){

        width: auto;
        height: auto;
    }


    @media (min-width: 992px){
   
        width:400px;
        height: auto;
    }

    @media (min-width: 992px){

        width: 600px;
        height: auto;
    }

}

.section-content {

    @media (min-width:768px) {
   
            display: flex;
            margin: auto;
  
    }

    @media (min-width: 992px) {
      
            flex-wrap: unset;
            margin: 0 auto;
            width: 72%;
        
    }

    h1 {
        margin-bottom: 20px;
    }
    .attachment-post-thumbnail {
        width: 100%;
        height: auto;

        @media (min-width:768px) {

            width: 100%;
        }

        @media (min-width: 992px){
            width: 100%;
        }
    }

    .col {
        width: 100%;
        @media (min-width:768px) {

            width: 50%;

        }
        @media (min-width: 992px){
        	width: 50%;
        }
    }
}


.col {
    width: auto;
    display: inline-block;
    padding: 0 10px;
    vertical-align: top;
}

@media (min-width: 768px) {
    .col-50 {
        width: 50%;
    }
}

@media (min-width: 768px) {
    .col-75 {
        width: 75%;
    }
}

.row {
    padding: 40px 0 20px 0;

    @media (min-width:768px) {
        padding: 40px 0;

    }

    @media (min-width: 992px){
        padding: 80px 0 0 0;

    }
}

.flexstart {
    justify-content: flex-start;
}

.flexend {
    justify-content: flex-end;
}

.center {
    justify-content: center;
}

.spacearound {
    justify-content: space-around
}

.spacebetween {
    justify-content: space-between;
}

.items-center {
    align-items: center;
}

.self-center {
    align-self: center;
}

.wrap {
    flex-wrap: wrap;
}


.text-center {
    text-align: center;
}

.grey-background {
    background-color: $gray;
    color: #333333;
}

.dark-background {
    background-color: $primary;

}
.blue-background {
    background-color: $secondary;

}
.orange-background {
    background-color: $yellow;

}

.light-text {
    color: $white;
}

.col-padding-20 {
    padding: 20px;
}

.col-spacing-5 {
    margin: 10px;
}

.marb-spacing-40 {
    margin: 0 auto 40px auto;
}

.mart-spacing-100 {
    margin-top: 100px;
}
.rounded-border {
    border-radius: 15px;
}

@media (min-width:768px) {
    .padding-right-60 {
        padding-right: 60px;
    }
}

.section-spacing {
    padding:40px;

    @media (min-width:768px) {
        padding:60px 0; 

    }

    @media (min-width: 992px){
        padding:80px 0;
    }

}

